syntax = "proto3";

package ddex.v1beta2;

import "ddex/v1beta2/common.proto";

option go_package = "github.com/AudiusProject/audiusd/pkg/api/ddex/v1beta2";

// Media Enrichment and Description (MEAD) message from the DDEX standard
message MediaEnrichmentDescription {
  DDEXMessageHeader header = 1;
  // unstructed metadata for the message, limited to 2048 bytes
  bytes metadata = 2;
  // address of the MEAD message, must be empty for new MEAD messages
  string address = 3;
  // addresses this MEAD refers to
  repeated string resource_addresses = 4;
  // addresses this MEAD refers to
  repeated string release_addresses = 5;
  // mood of the resource
  Mood mood = 6;
}

message Mood {
  string mood = 1;
  // description of the mood
  string definition = 2;
}
